2007-11-27  Dom Lachowicz <domlachowicz@gmail.com>

	* rsvg-base.c: 499386 - rsvg_handle_close leads to segfault
	* rsvg-private.h: Ditto
	
2007-09-24  Dom Lachowicz <domlachowicz@gmail.com>

	* gdk-pixbuf-loader/io-svg.c: svgz support is optional (#473836, Lucas Rocha)
	* rsvg-cairo-draw.c: Fix memory leak (#475841, Matthias Clasen)
	
2007-08-29  Dom Lachowicz <domlachowicz@gmail.com>

	* NEWS: update
	* configure.in: 2.18.2

2007-08-21  Emmanuel Pacaud <emmanuel.pacaud@lapp.in2p3.fr>

	* rsvg-styles.c: fix a typo preventing the compilation.

2007-08-20  Dom Lachowicz <domlachowicz@gmail.com>

	* NEWS: update
	* configure.in: 2.18.1
	
2007-08-20  Dom Lachowicz <domlachowicz@gmail.com>

	* rsvg-styles.c: Basic support for SVG 1.1's text-rendering and shape-rendering properties (#464599)
	http://www.w3.org/TR/SVG/painting.html#ShapeRenderingProperty
	* rsvg-styles.h: Ditto
	* rsvg-cairo-draw.c: Ditto
	
2007-07-24  Dom Lachowicz <domlachowicz@gmail.com>

	* configure.in: Bump version to 2.18.0
	
2007-07-20  Dom Lachowicz <domlachowicz@gmail.com>

	* rsvg-cairo-render.h:
	* rsvg-cairo-draw.c:
	* rsvg-cairo-clip.c:
	* rsvg-cairo-render.c: Rendering magnified SVGs with rsvg-cairo produces blurry images (#412682)
	From Bertram Felgenhauer
	
2007-07-20  Dom Lachowicz <domlachowicz@gmail.com>

	* rsvg-styles.c: Re-order how CSS styles get applied (#418823)
	
2007-07-20  Dom Lachowicz <domlachowicz@gmail.com>

	* rsvg-base.c: rsvg threw away nodes that it didn't understand, which caused
	things like <switch> not to work properly. Now, treat unknown nodes as
	groups (#401115)
	
2007-07-20  Emmanuel Pacaud <emmanuel.pacaud@lapp.in2p3.fr>

	* rsvg-base.c: Fix for embedded SVG position issue (#444462)
	
2007-07-19  Dom Lachowicz <domlachowicz@gmail.com>

	* rsvg-cairo-draw.c: Replace g_malloc with g_try_malloc. We'll need
	to go through the rest of the source and replace g_new with g_try_new,
	and fall-back gracefully.
	
2007-07-01  Dom Lachowicz <domlachowicz@gmail.com>
