@@ -1,3 +1,7 @@
+2008-01-19  Bertram Felgenhauer <bertram.felgenhauer@googlemail.com>
+
+	* Bug 500787 - translation gets ignored when rendering an svg with cairo in the context of a cairo_push_group()
+	
 2007-11-27  Dom Lachowicz <domlachowicz@gmail.com>
 
 	* rsvg-base.c: 499386 - rsvg_handle_close leads to segfault
